[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/train/train_circle_1.png" type="Texture" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://playground/Player.gd" type="Script" id=3]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 137.873, 341.833, -235.201, 135.611, 235.201, -135.611, 334.933, 189.27, -16.9514, -156.801, 16.9514, 156.801, 618.869, 180.794, -103.827, 129.254, 103.827, -129.254, 1343.54, 337.595, -4.23785, -188.584, 4.23785, 188.584, 1631.72, 689.337, 144.087, 4.23785, -144.087, -4.23785, 1375.33, 973.273, 99.5895, 91.1138, -99.5895, -91.1138, 894.329, 761.38, 156.801, 8.4757, -156.801, -8.4757, 445.117, 947.846, 0, 0, 0, 0, 311.625, 636.363 )
}

[sub_resource type="CircleShape2D" id=2]
radius = 52.3485

[sub_resource type="CapsuleShape2D" id=3]
radius = 21.3634
height = 31.183

[node name="PathTest" type="Node2D"]

[node name="Path2D" type="Path2D" parent="."]
visible = false
curve = SubResource( 1 )

[node name="PathFollow2DHead" type="PathFollow2D" parent="Path2D"]
position = Vector2( 135.932, 338.533 )
rotation = -1.57029
offset = 3.84405

[node name="HeadDetect" type="RigidBody2D" parent="Path2D/PathFollow2DHead"]
collision_mask = 0
gravity_scale = 0.0

[node name="Icon" type="Sprite" parent="Path2D/PathFollow2DHead/HeadDetect"]
position = Vector2( 2.86163, 2.23227 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path2D/PathFollow2DHead/HeadDetect"]
shape = SubResource( 2 )

[node name="PathFollow2DEnd" type="PathFollow2D" parent="Path2D"]
position = Vector2( 311.625, 636.363 )
rotation = -1.50625
offset = 3844.05

[node name="EndDetect" type="RigidBody2D" parent="Path2D/PathFollow2DEnd"]
collision_mask = 0
gravity_scale = 0.0

[node name="Icon" type="Sprite" parent="Path2D/PathFollow2DEnd/EndDetect"]
position = Vector2( -0.39563, 7.289 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path2D/PathFollow2DEnd/EndDetect"]
shape = SubResource( 2 )

[node name="Player" type="Area2D" parent="."]
position = Vector2( 135.932, 125 )
script = ExtResource( 3 )

[node name="train" type="Sprite" parent="Player"]
position = Vector2( -0.240234, -0.0773926 )
scale = Vector2( 0.028, 0.028 )
texture = ExtResource( 1 )
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 1.64712, 10.8869 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="Tween" type="Tween" parent="Player"]

[connection signal="body_entered" from="Player" to="Player" method="_on_Player_body_entered"]
